--- a/apps/fretonator-web/src/app/common/fretonator/scale-map/scale-map.component.scss
+++ b/apps/fretonator-web/src/app/common/fretonator/scale-map/scale-map.component.scss
@@ -165,7 +165,7 @@
 
 .infoHighlight {
   border-radius: var(--border-radius-chip);
-  padding: pxToRem($grid-unit / 4) pxToRem($grid-unit * 2);
+  padding: pxToRem($grid-unit / 4) pxToRem(9);
   color: var(--black);
   background-color: var(--peach);
 }
